--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -60,15 +60,10 @@
     <Compile Include="SwitchOAEPTest.cs" />
     <Compile Include="MACCipherTest.cs" />
     <Compile Include="GuillotineCipherTest.cs" />
+    <Compile Include="ValidateTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SwitchCipher\Ciphers.csproj">
-      <Project>{dffc84f5-c36e-4b2f-8312-54f3e14d853b}</Project>
-      <Name>Ciphers</Name>
-    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
